--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:generate-types": "supabase gen types typescript --project-id YOUR_PROJECT_ID --schema public > src/types/database.ts"
+    "types:generate": "supabase gen types typescript --project-id wapzrqysraazykcfmrhd --schema public > src/types/database.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
@@ -21,8 +21,10 @@
     "@supabase/supabase-js": "^2.39.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.263.1",
     "next": "14.2.13",
+    "qrcode": "^1.5.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.62.0",
@@ -32,6 +34,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.16",
