--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "recharts": "^3.1.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
