--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.12",
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.263.1",
     "next": "14.2.13",
