--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tanstack/react-query": "^5.87.1",
     "@tanstack/react-query-devtools": "^5.87.1",
     "@zxing/library": "^0.21.3",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -51,6 +52,7 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20.10.6",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
