--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -12,17 +12,10 @@ jobs:
       - name: Checkout source repo (leo-neutrondigital/rewapp)
         uses: actions/checkout@v3
 
-      - name: Debug token access
-        run: |
-          echo "Testing token access to target repo..."
-          curl -H "Authorization: token ${{ secrets.MIRROR_TOKEN }}" \
-               -H "Accept: application/vnd.github.v3+json" \
-               https://api.github.com/repos/fuegoextremo/rewappFuego
-      
       - name: Push to fuegoextremo/rewappFuego
         run: |
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@github.com'
 
-          git remote add mirror https://x-access-token:${{ secrets.MIRROR_TOKEN }}@github.com/fuegoextremo/rewappFuego
+          git remote add mirror https://x-access-token:${{ secrets.MIRROR_TOKEN }}@github.com/fuegoextremo/rewappFuego.git
           git push mirror main --force
