--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -14,8 +14,9 @@ jobs:
 
       - name: Push to fuegoextremo/rewappFuego
         run: |
-          git config --global user.name 'GitHub Actions'
-          git config --global user.email 'actions@github.com'
+          git config --global user.name 'Mirror Bot'
+          git config --global user.email 'noreply@github.com'
 
-          git remote add mirror https://x-access-token:${{ secrets.MIRROR_TOKEN }}@github.com/fuegoextremo/rewappFuego.git
+          # Usar el token directamente sin x-access-token prefix
+          git remote add mirror https://${{ secrets.MIRROR_TOKEN }}@github.com/fuegoextremo/rewappFuego.git
           git push mirror main --force
