--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -10,13 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source repo (leo-neutrondigital/rewapp)
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-      - name: Push to fuegoextremo/rewappFuego
-        run: |
-          git config --global user.name 'Mirror Bot'
-          git config --global user.email 'noreply@github.com'
-
-          # Usar el token directamente sin x-access-token prefix
-          git remote add mirror https://${{ secrets.MIRROR_TOKEN }}@github.com/fuegoextremo/rewappFuego.git
-          git push mirror main --force
+      - name: Mirror repository
+        uses: pixta-dev/repository-mirroring-action@v1
+        with:
+          target_repo_url: https://github.com/fuegoextremo/rewappFuego.git
+          ssh_private_key: ${{ secrets.MIRROR_SSH_KEY }}
