--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -14,8 +14,17 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Setup SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.MIRROR_SSH_KEY }}" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
+          ssh-keyscan -H github.com >> ~/.ssh/known_hosts
+
       - name: Mirror repository
-        uses: pixta-dev/repository-mirroring-action@v1
-        with:
-          target_repo_url: https://github.com/fuegoextremo/rewappFuego.git
-          ssh_private_key: ${{ secrets.MIRROR_SSH_KEY }}
+        run: |
+          git config --global user.name 'Mirror Bot'
+          git config --global user.email 'mirror@rewapp.com'
+          
+          git remote add mirror git@github.com:fuegoextremo/rewappFuego.git
+          git push mirror main --force
