--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -7,6 +7,8 @@ on:
 
 jobs:
   mirror:
+    # Solo ejecutar si es el repo fuente
+    if: github.repository == 'leo-neutrondigital/rewapp'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source repo (leo-neutrondigital/rewapp)
