--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,16 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
+# Environment files (NUNCA subir a Git)
+.env
+.env.local
+.env.development
+.env.production
+.env.test
 .env*.local
+.env*.production
+.env*.development
+.env*.supabase
 
 # vercel
 .vercel
